src/objects/TriggerHandlerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the behavior of the class SObjectTriggerHandler.cls</description>
    <fields>
        <fullName>EnableDebugging__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Debugging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteTriggers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if any trigger handler classes run its execute() method. This should always be enabled unless you are doing a data fix, etc and need to temporarily disable all triggers.</description>
        <inlineHelpText>Controls if any trigger handler classes run its execute() method. This should always be enabled unless you are doing a data fix, etc and need to temporarily disable all triggers.</inlineHelpText>
        <label>Execute Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HandlerClassesToSkip__c</fullName>
        <label>Handler Classes to Skip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PreventRecursion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prevent Recursion</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Handler Settings</label>
</CustomObject>